# GoalsARM

./: .gitignore  CMakeLists.txt  CMakePresets.json  GoalsARM.sln  GoalsARM.vcxproj  GoalsARM.vcxproj.filters  LICENSE  README.md
.github/workflows/: test.yml
cmake/: CMakeCommonPresets.json  CMakeDarwinPresets.json  CMakeLinuxPresets.json  CMakeUserPresets.json  CMakeWindowsPresets.json
include/: DPConst.h  DPData.h  DPDefs.h  DPProjection.h  DPProjection_impl.h  DPUPDData.h  DPUPDData_impl.h  DPUtil.h  GBDemogInterp.h  GBMath.h  GBUtil.h  GBUtil_impl.h  GoalsARM.h  Population.h  Population_impl.h
src/: DPProjection.cpp  DPUPDData.cpp  GBUtil.cpp  Population.cpp
tests/: CMakeLists.txt  tests.cpp  tests.sln  tests.vcxproj
